test/expected/explain_+dtor-error.out
explain X::~C()
           ^
12: syntax error: "~": cast or declaration expected
